--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, and Complexity</h1>
+
+    <p>
+        Time complexity is a crucial concept in computer science that measures the amount of time an algorithm takes to complete as a function of the input size. Efficient algorithms are those with low time complexity, meaning they can handle larger inputs without a significant increase in execution time.
+    </p>
+
+    <p>
+        Space Complexity refers to the amount of memory space an algorithm requires in relation to the input size. In algorithm analysis, we often express space complexity using Big O notation, such as O(n), where 'n' represents the input size. One common notation is <b>Space Complexity</b>, which helps us understand how the memory requirements of an algorithm scale with the input size.
+    </p>
+>
     <script type="text/javascript" src="./script.js">
 </script>
 
