--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time, Space, and Complexity</h1>
+	<h1>Time and Space Complexity</h1>
 
     <p>
         Time complexity is a crucial concept in computer science that measures the amount of time an algorithm takes to complete as a function of the input size. Efficient algorithms are those with low time complexity, meaning they can handle larger inputs without a significant increase in execution time.
