--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     </p>
 
     <p>
-        Space Complexity refers to the amount of memory space an algorithm requires in relation to the input size. In algorithm analysis, we often express space complexity using Big O notation, such as O(n), where 'n' represents the input size. One common notation is <b>Space Complexity</b>, which helps us understand how the memory requirements of an algorithm scale with the input size.
+        <b>Space Complexity</b> refers to the amount of memory space an algorithm requires in relation to the input size. In algorithm analysis, we often express space complexity using Big O notation, such as O(n), where 'n' represents the input size. One common notation is <b>Space Complexity</b>, which helps us understand how the memory requirements of an algorithm scale with the input size.
     </p>
 >
     <script type="text/javascript" src="./script.js">
