--- a/main.html
+++ b/main.html
@@ -3,24 +3,25 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	 <title>Time and Space Complexity</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time and Space Complexity</h1>
-
-    <p>
-        Time complexity is a crucial concept in computer science that measures the amount of time an algorithm takes to complete as a function of the input size. Efficient algorithms are those with low time complexity, meaning they can handle larger inputs without a significant increase in execution time.
-    </p>
-
-    <p>
-        <b>Space Complexity</b> refers to the amount of memory space an algorithm requires in relation to the input size. In algorithm analysis, we often express space complexity using Big O notation, such as O(n), where 'n' represents the input size. One common notation is <b>Space Complexity</b>, which helps us understand how the memory requirements of an algorithm scale with the input size.
-    </p>
->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<h1> Time and Space Complexity </h1>
+	<p> Time complexity is a type of coputational complaxity that describes the time required to execute an algorithm.
+		The time complexity of an algorithm is the amount of time it takes for each statement to complete.o,
+		the time complexity is the number of operations an algorithm performs to complete its task 
+		(considering that each operation takes the same amount of time). 
+		The algorithm that performs the task in the smallest number of operations is considered the most efficient one in
+		terms of the time complexity. </p>
+	<p>  The <b> Space Complexity </b> refers to the total amount of memory space used by an algorithm/program, 
+		including the space of input values for execution. The space complexity of an algorithm or a data 
+		structure is the amount of memory space required to solve an instance of the computational problem as a 
+		function of characteristics of the input. It is the memory required by an algorithm until it executes completely.
+		This includes the memory space used by its inputs, called input space, and any other (auxiliary) memory
+		it uses during execution, which is called auxiliary space.Similar to time complexity, space complexity
+		is often expressed asymptotically in big O notation, such as O(n) space complexity.</p>
 </body>
 
 </html>
